
= volute - CHANGELOG.txt


== volute - 0.1.1    not yet released

- volutes.remove(Financing) for removing top-level volutes
- volutes(arg) for querying the top-level volutes
- enforced guard listing <=> OR and volute nesting <=> AND


== volute - 0.1.0    released 2010/10/07

- initial release
