@@ -114,6 +114,8 @@ As soon as 1 argument matches, the Ruby block of the volute is executed. In othe
 
 If you need for an AND, read on to "nesting volutes".
 
+It's possible to filter based on the previous value and the new value (with :any as a wildcard) :
+
   volute 0 => 100 do
     puts "some attribute went from 0 to 100"
   end
@@ -124,6 +126,19 @@ If you need for an AND, read on to "nesting volutes".
 
   volute 0 => :any do
     puts "some attribute was at 0 and just got changed"
+  end
+
+Filtering on attributes who match a regular expression :
+
+  class Invoice
+    include Volute
+
+    attr_accessor :amount
+    attr_accessor :customer_name, :customer_id
+  end
+
+  volute /^customer_/ do
+    puts "attribute :customer_name or :customer_id got modified"
   end
 
 
